--- a/WebWind/Resources/h-stack.css
+++ b/WebWind/Resources/h-stack.css
@@ -1,7 +1,7 @@
 
-v-stack {
+h-stack {
     display: flex;
     flex-wrap: nowrap;
-    flex-direction: column;
+    flex-direction: row;
     gap: 10px;
 }
