--- a/WebWind/Resources/h-stack.css
+++ b/WebWind/Resources/h-stack.css
@@ -4,4 +4,6 @@ h-stack.default-style {
     flex-wrap: nowrap;
     flex-direction: row;
     gap: 10px;
+    align-items: flex-start;
+    box-sizing: border-box;
 }
