--- a/WebWind/Resources/v-stack.css
+++ b/WebWind/Resources/v-stack.css
@@ -4,4 +4,6 @@ v-stack.default-style {
     flex-wrap: nowrap;
     flex-direction: column;
     gap: 10px;
+    align-items: flex-start;
+    box-sizing: border-box;
 }
